objects/ASI_CRM_Running_Number__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Module__c</fullName>
        <label>Module</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_Digit__c</fullName>
        <label>Number of Digit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Prefix__c</fullName>
        <label>Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Running_Number__c</fullName>
        <label>Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Running Number</label>
    <nameField>
        <displayFormat>ASI_CRM_RN-{00000}</displayFormat>
        <label>Running Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Running Numbers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_Running_Number</fullName>
        <active>true</active>
        <label>ASI CRM MO Running Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Running_Number</fullName>
        <active>true</active>
        <label>ASI CRM MY Running Number</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>